Bug 101241 - Flickering cursor, grey boxes displayed instead of dropdown/right click menu and dialog content after changing table border
Summary: Flickering cursor, grey boxes displayed instead of dropdown/right click menu ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.2 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2016-08-01 02:04 UTC by Budi Atma Setiawan
Modified: 2016-08-02 12:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
steps where the bug is found (411.56 KB, application/zip)
2016-08-01 02:04 UTC, Budi Atma Setiawan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Budi Atma Setiawan 2016-08-01 02:04:16 UTC
Created attachment 126505 [details]
steps where the bug is found

This is an annoying thing I found when working with LibreOffice 5.2.0 rc2.

The Steps:

1. Make a table
2. Enter table properties using Menu bar Table>Properties>Borders OR right click on table>table proprties
3. Change its border style to style number 8
4. text in menu bar, right click menu, and dialog menu seems missing




I am using:
-Lenovo G400
-Ubuntu 14.04
-Unity Desktop Environment 7.2.6
-Linux kernel 3.14.1-031401

*screenshots attached
Comment 1 Aron Budea 2016-08-01 05:42:37 UTC
Reproduced both with LO 5.2.0.3 both in Windows 7 and Ubuntu 15.10 (happens both with GL & default UI render).
Not reproduced with LO 5.1.4.2. => regression

The issue was already reported in this comment (with an alpha from 2016.04.21.): https://bugs.documentfoundation.org/show_bug.cgi?id=99415#c3
However since that report itself is about a different bug, keeping this open.
Comment 2 Aron Budea 2016-08-01 05:50:34 UTC
Also, note the cursor flickering in the table.
Comment 3 Caolán McNamara 2016-08-02 10:12:43 UTC
This is from...

commit 9a95520948de1d92c55252aa5f90606b01d6ac9e
Author: aqcoder <flw.aquarius@gmail.com>
Date:   Sun Dec 13 19:11:28 2015 +0800

    fix paint table border in DOUBLE_THIN style
Comment 4 Commit Notification 2016-08-02 10:20:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=772191616a0cceebf91a9674ce7417d5cad0050f

Resolves: tdf#101241 Revert "fix paint table border in DOUBLE_THIN style"

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2016-08-02 10:22:29 UTC
Not opengl related, so drop that dependency. I'll have to just revert cause we don't have a reproducer for the original problem and the never-ending paint+invalidate is more serious. This is masked under gtk3, so more noticeable under gtk2.
Comment 6 Commit Notification 2016-08-02 12:11:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=832d359930c86c7bfe5547e580d1bfadd9177642&h=libreoffice-5-2

Resolves: tdf#101241 Revert "fix paint table border in DOUBLE_THIN style"

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.