Resolves: tdf#101241 Revert "fix paint table border in DOUBLE_THIN style"

because of the never-ending invalidate and paint of tdf#101241

there was no bug or route to reproduce the original problem so can't
try to solve it a different way.

This reverts commit 9a95520948de1d92c55252aa5f90606b01d6ac9e.